{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 4,
  "lineage": "d72186a5-26a5-1774-ec09-c2b6ab4880d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621214086124:security-group/sg-0a0c8d344bc290299",
            "description": "Security group for application tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0c8d344bc290299",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08125bd380de0b870"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "dev-app-20250806182634601600000002",
            "name_prefix": "dev-app-",
            "owner_id": "621214086124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-app-sg",
              "Tier": "Application"
            },
            "tags_all": {
              "Name": "dev-app-sg",
              "Tier": "Application"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aa78e15da9c2c64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621214086124:security-group/sg-09dc86edca26fe399",
            "description": "Security group for database tier",
            "egress": [],
            "id": "sg-09dc86edca26fe399",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0c8d344bc290299"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dev-db-20250806182641814700000003",
            "name_prefix": "dev-db-",
            "owner_id": "621214086124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-db-sg",
              "Tier": "Database"
            },
            "tags_all": {
              "Name": "dev-db-sg",
              "Tier": "Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aa78e15da9c2c64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621214086124:security-group/sg-08125bd380de0b870",
            "description": "Security group for web tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08125bd380de0b870",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-web-20250806182625967800000001",
            "name_prefix": "dev-web-",
            "owner_id": "621214086124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-web-sg",
              "Tier": "Web"
            },
            "tags_all": {
              "Name": "dev-web-sg",
              "Tier": "Web"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aa78e15da9c2c64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}